; ModuleID = '/home/carl/AnghaBench/git/extr_sequencer.c_parse_insn_line.c'
source_filename = "/home/carl/AnghaBench/git/extr_sequencer.c_parse_insn_line.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.repository = type { i32 }
%struct.todo_item = type { i32, i32, i32, i32*, i32 }
%struct.object_id = type { i32 }

@.str = private unnamed_addr constant [3 x i8] c" \09\00", align 1
@comment_line_char = common dso_local global i8 0, align 1
@TODO_COMMENT = common dso_local global i32 0, align 4
@TODO_NOOP = common dso_local global i32 0, align 4
@TODO_BREAK = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [35 x i8] c"%s does not accept arguments: '%s'\00", align 1
@.str.2 = private unnamed_addr constant [25 x i8] c"missing arguments for %s\00", align 1
@TODO_EXEC = common dso_local global i32 0, align 4
@TODO_LABEL = common dso_local global i32 0, align 4
@TODO_RESET = common dso_local global i32 0, align 4
@TODO_MERGE = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [3 x i8] c"-C\00", align 1
@.str.4 = private unnamed_addr constant [3 x i8] c"-c\00", align 1
@TODO_EDIT_MERGE_MSG = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [4 x i8] c" \09\0A\00", align 1
@.str.6 = private unnamed_addr constant [23 x i8] c"could not parse '%.*s'\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.repository*, %struct.todo_item*, i8*, i8*, i8*)* @parse_insn_line to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parse_insn_line(%struct.repository* %0, %struct.todo_item* %1, i8* %2, i8* %3, i8* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.repository*, align 8
  %8 = alloca %struct.todo_item*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca %struct.object_id, align 4
  %13 = alloca i8*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  store %struct.repository* %0, %struct.repository** %7, align 8
  store %struct.todo_item* %1, %struct.todo_item** %8, align 8
  store i8* %2, i8** %9, align 8
  store i8* %3, i8** %10, align 8
  store i8* %4, i8** %11, align 8
  %18 = load %struct.todo_item*, %struct.todo_item** %8, align 8
  %19 = getelementptr inbounds %struct.todo_item, %struct.todo_item* %18, i32 0, i32 4
  store i32 0, i32* %19, align 8
  %20 = load i8*, i8** %10, align 8
  %21 = call i32 @strspn(i8* %20, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  %22 = load i8*, i8** %10, align 8
  %23 = sext i32 %21 to i64
  %24 = getelementptr inbounds i8, i8* %22, i64 %23
  store i8* %24, i8** %10, align 8
  %25 = load i8*, i8** %10, align 8
  %26 = load i8*, i8** %11, align 8
  %27 = icmp eq i8* %25, %26
  br i1 %27, label %40, label %28

28:                                               ; preds = %5
  %29 = load i8*, i8** %10, align 8
  %30 = load i8, i8* %29, align 1
  %31 = sext i8 %30 to i32
  %32 = icmp eq i32 %31, 13
  br i1 %32, label %40, label %33

33:                                               ; preds = %28
  %34 = load i8*, i8** %10, align 8
  %35 = load i8, i8* %34, align 1
  %36 = sext i8 %35 to i32
  %37 = load i8, i8* @comment_line_char, align 1
  %38 = sext i8 %37 to i32
  %39 = icmp eq i32 %36, %38
  br i1 %39, label %40, label %62

40:                                               ; preds = %33, %28, %5
  %41 = load i32, i32* @TODO_COMMENT, align 4
  %42 = load %struct.todo_item*, %struct.todo_item** %8, align 8
  %43 = getelementptr inbounds %struct.todo_item, %struct.todo_item* %42, i32 0, i32 0
  store i32 %41, i32* %43, align 8
  %44 = load %struct.todo_item*, %struct.todo_item** %8, align 8
  %45 = getelementptr inbounds %struct.todo_item, %struct.todo_item* %44, i32 0, i32 3
  store i32* null, i32** %45, align 8
  %46 = load i8*, i8** %10, align 8
  %47 = load i8*, i8** %9, align 8
  %48 = ptrtoint i8* %46 to i64
  %49 = ptrtoint i8* %47 to i64
  %50 = sub i64 %48, %49
  %51 = trunc i64 %50 to i32
  %52 = load %struct.todo_item*, %struct.todo_item** %8, align 8
  %53 = getelementptr inbounds %struct.todo_item, %struct.todo_item* %52, i32 0, i32 1
  store i32 %51, i32* %53, align 4
  %54 = load i8*, i8** %11, align 8
  %55 = load i8*, i8** %10, align 8
  %56 = ptrtoint i8* %54 to i64
  %57 = ptrtoint i8* %55 to i64
  %58 = sub i64 %56, %57
  %59 = trunc i64 %58 to i32
  %60 = load %struct.todo_item*, %struct.todo_item** %8, align 8
  %61 = getelementptr inbounds %struct.todo_item, %struct.todo_item* %60, i32 0, i32 2
  store i32 %59, i32* %61, align 8
  store i32 0, i32* %6, align 4
  br label %296

62:                                               ; preds = %33
  store i32 0, i32* %14, align 4
  br label %63

63:                                               ; preds = %76, %62
  %64 = load i32, i32* %14, align 4
  %65 = load i32, i32* @TODO_COMMENT, align 4
  %66 = icmp slt i32 %64, %65
  br i1 %66, label %67, label %79

67:                                               ; preds = %63
  %68 = load i32, i32* %14, align 4
  %69 = call i64 @is_command(i32 %68, i8** %10)
  %70 = icmp ne i64 %69, 0
  br i1 %70, label %71, label %75

71:                                               ; preds = %67
  %72 = load i32, i32* %14, align 4
  %73 = load %struct.todo_item*, %struct.todo_item** %8, align 8
  %74 = getelementptr inbounds %struct.todo_item, %struct.todo_item* %73, i32 0, i32 0
  store i32 %72, i32* %74, align 8
  br label %79

75:                                               ; preds = %67
  br label %76

76:                                               ; preds = %75
  %77 = load i32, i32* %14, align 4
  %78 = add nsw i32 %77, 1
  store i32 %78, i32* %14, align 4
  br label %63

79:                                               ; preds = %71, %63
  %80 = load i32, i32* %14, align 4
  %81 = load i32, i32* @TODO_COMMENT, align 4
  %82 = icmp sge i32 %80, %81
  br i1 %82, label %83, label %84

83:                                               ; preds = %79
  store i32 -1, i32* %6, align 4
  br label %296

84:                                               ; preds = %79
  %85 = load i8*, i8** %10, align 8
  %86 = call i32 @strspn(i8* %85, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  store i32 %86, i32* %17, align 4
  %87 = load i32, i32* %17, align 4
  %88 = load i8*, i8** %10, align 8
  %89 = sext i32 %87 to i64
  %90 = getelementptr inbounds i8, i8* %88, i64 %89
  store i8* %90, i8** %10, align 8
  %91 = load %struct.todo_item*, %struct.todo_item** %8, align 8
  %92 = getelementptr inbounds %struct.todo_item, %struct.todo_item* %91, i32 0, i32 0
  %93 = load i32, i32* %92, align 8
  %94 = load i32, i32* @TODO_NOOP, align 4
  %95 = icmp eq i32 %93, %94
  br i1 %95, label %102, label %96

96:                                               ; preds = %84
  %97 = load %struct.todo_item*, %struct.todo_item** %8, align 8
  %98 = getelementptr inbounds %struct.todo_item, %struct.todo_item* %97, i32 0, i32 0
  %99 = load i32, i32* %98, align 8
  %100 = load i32, i32* @TODO_BREAK, align 4
  %101 = icmp eq i32 %99, %100
  br i1 %101, label %102, label %133

102:                                              ; preds = %96, %84
  %103 = load i8*, i8** %10, align 8
  %104 = load i8*, i8** %11, align 8
  %105 = icmp ne i8* %103, %104
  br i1 %105, label %106, label %114

106:                                              ; preds = %102
  %107 = call i32 @_(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.1, i64 0, i64 0))
  %108 = load %struct.todo_item*, %struct.todo_item** %8, align 8
  %109 = getelementptr inbounds %struct.todo_item, %struct.todo_item* %108, i32 0, i32 0
  %110 = load i32, i32* %109, align 8
  %111 = call i32 @command_to_string(i32 %110)
  %112 = load i8*, i8** %10, align 8
  %113 = call i32 (i32, i32, ...) @error(i32 %107, i32 %111, i8* %112)
  store i32 %113, i32* %6, align 4
  br label %296

114:                                              ; preds = %102
  %115 = load %struct.todo_item*, %struct.todo_item** %8, align 8
  %116 = getelementptr inbounds %struct.todo_item, %struct.todo_item* %115, i32 0, i32 3
  store i32* null, i32** %116, align 8
  %117 = load i8*, i8** %10, align 8
  %118 = load i8*, i8** %9, align 8
  %119 = ptrtoint i8* %117 to i64
  %120 = ptrtoint i8* %118 to i64
  %121 = sub i64 %119, %120
  %122 = trunc i64 %121 to i32
  %123 = load %struct.todo_item*, %struct.todo_item** %8, align 8
  %124 = getelementptr inbounds %struct.todo_item, %struct.todo_item* %123, i32 0, i32 1
  store i32 %122, i32* %124, align 4
  %125 = load i8*, i8** %11, align 8
  %126 = load i8*, i8** %10, align 8
  %127 = ptrtoint i8* %125 to i64
  %128 = ptrtoint i8* %126 to i64
  %129 = sub i64 %127, %128
  %130 = trunc i64 %129 to i32
  %131 = load %struct.todo_item*, %struct.todo_item** %8, align 8
  %132 = getelementptr inbounds %struct.todo_item, %struct.todo_item* %131, i32 0, i32 2
  store i32 %130, i32* %132, align 8
  store i32 0, i32* %6, align 4
  br label %296

133:                                              ; preds = %96
  %134 = load i32, i32* %17, align 4
  %135 = icmp ne i32 %134, 0
  br i1 %135, label %143, label %136

136:                                              ; preds = %133
  %137 = call i32 @_(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.2, i64 0, i64 0))
  %138 = load %struct.todo_item*, %struct.todo_item** %8, align 8
  %139 = getelementptr inbounds %struct.todo_item, %struct.todo_item* %138, i32 0, i32 0
  %140 = load i32, i32* %139, align 8
  %141 = call i32 @command_to_string(i32 %140)
  %142 = call i32 (i32, i32, ...) @error(i32 %137, i32 %141)
  store i32 %142, i32* %6, align 4
  br label %296

143:                                              ; preds = %133
  %144 = load %struct.todo_item*, %struct.todo_item** %8, align 8
  %145 = getelementptr inbounds %struct.todo_item, %struct.todo_item* %144, i32 0, i32 0
  %146 = load i32, i32* %145, align 8
  %147 = load i32, i32* @TODO_EXEC, align 4
  %148 = icmp eq i32 %146, %147
  br i1 %148, label %161, label %149

149:                                              ; preds = %143
  %150 = load %struct.todo_item*, %struct.todo_item** %8, align 8
  %151 = getelementptr inbounds %struct.todo_item, %struct.todo_item* %150, i32 0, i32 0
  %152 = load i32, i32* %151, align 8
  %153 = load i32, i32* @TODO_LABEL, align 4
  %154 = icmp eq i32 %152, %153
  br i1 %154, label %161, label %155

155:                                              ; preds = %149
  %156 = load %struct.todo_item*, %struct.todo_item** %8, align 8
  %157 = getelementptr inbounds %struct.todo_item, %struct.todo_item* %156, i32 0, i32 0
  %158 = load i32, i32* %157, align 8
  %159 = load i32, i32* @TODO_RESET, align 4
  %160 = icmp eq i32 %158, %159
  br i1 %160, label %161, label %180

161:                                              ; preds = %155, %149, %143
  %162 = load %struct.todo_item*, %struct.todo_item** %8, align 8
  %163 = getelementptr inbounds %struct.todo_item, %struct.todo_item* %162, i32 0, i32 3
  store i32* null, i32** %163, align 8
  %164 = load i8*, i8** %10, align 8
  %165 = load i8*, i8** %9, align 8
  %166 = ptrtoint i8* %164 to i64
  %167 = ptrtoint i8* %165 to i64
  %168 = sub i64 %166, %167
  %169 = trunc i64 %168 to i32
  %170 = load %struct.todo_item*, %struct.todo_item** %8, align 8
  %171 = getelementptr inbounds %struct.todo_item, %struct.todo_item* %170, i32 0, i32 1
  store i32 %169, i32* %171, align 4
  %172 = load i8*, i8** %11, align 8
  %173 = load i8*, i8** %10, align 8
  %174 = ptrtoint i8* %172 to i64
  %175 = ptrtoint i8* %173 to i64
  %176 = sub i64 %174, %175
  %177 = trunc i64 %176 to i32
  %178 = load %struct.todo_item*, %struct.todo_item** %8, align 8
  %179 = getelementptr inbounds %struct.todo_item, %struct.todo_item* %178, i32 0, i32 2
  store i32 %177, i32* %179, align 8
  store i32 0, i32* %6, align 4
  br label %296

180:                                              ; preds = %155
  %181 = load %struct.todo_item*, %struct.todo_item** %8, align 8
  %182 = getelementptr inbounds %struct.todo_item, %struct.todo_item* %181, i32 0, i32 0
  %183 = load i32, i32* %182, align 8
  %184 = load i32, i32* @TODO_MERGE, align 4
  %185 = icmp eq i32 %183, %184
  br i1 %185, label %186, label %237

186:                                              ; preds = %180
  %187 = load i8*, i8** %10, align 8
  %188 = call i64 @skip_prefix(i8* %187, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.3, i64 0, i64 0), i8** %10)
  %189 = icmp ne i64 %188, 0
  br i1 %189, label %190, label %196

190:                                              ; preds = %186
  %191 = load i8*, i8** %10, align 8
  %192 = call i32 @strspn(i8* %191, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  %193 = load i8*, i8** %10, align 8
  %194 = sext i32 %192 to i64
  %195 = getelementptr inbounds i8, i8* %193, i64 %194
  store i8* %195, i8** %10, align 8
  br label %236

196:                                              ; preds = %186
  %197 = load i8*, i8** %10, align 8
  %198 = call i64 @skip_prefix(i8* %197, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.4, i64 0, i64 0), i8** %10)
  %199 = icmp ne i64 %198, 0
  br i1 %199, label %200, label %211

200:                                              ; preds = %196
  %201 = load i8*, i8** %10, align 8
  %202 = call i32 @strspn(i8* %201, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  %203 = load i8*, i8** %10, align 8
  %204 = sext i32 %202 to i64
  %205 = getelementptr inbounds i8, i8* %203, i64 %204
  store i8* %205, i8** %10, align 8
  %206 = load i32, i32* @TODO_EDIT_MERGE_MSG, align 4
  %207 = load %struct.todo_item*, %struct.todo_item** %8, align 8
  %208 = getelementptr inbounds %struct.todo_item, %struct.todo_item* %207, i32 0, i32 4
  %209 = load i32, i32* %208, align 8
  %210 = or i32 %209, %206
  store i32 %210, i32* %208, align 8
  br label %235

211:                                              ; preds = %196
  %212 = load i32, i32* @TODO_EDIT_MERGE_MSG, align 4
  %213 = load %struct.todo_item*, %struct.todo_item** %8, align 8
  %214 = getelementptr inbounds %struct.todo_item, %struct.todo_item* %213, i32 0, i32 4
  %215 = load i32, i32* %214, align 8
  %216 = or i32 %215, %212
  store i32 %216, i32* %214, align 8
  %217 = load %struct.todo_item*, %struct.todo_item** %8, align 8
  %218 = getelementptr inbounds %struct.todo_item, %struct.todo_item* %217, i32 0, i32 3
  store i32* null, i32** %218, align 8
  %219 = load i8*, i8** %10, align 8
  %220 = load i8*, i8** %9, align 8
  %221 = ptrtoint i8* %219 to i64
  %222 = ptrtoint i8* %220 to i64
  %223 = sub i64 %221, %222
  %224 = trunc i64 %223 to i32
  %225 = load %struct.todo_item*, %struct.todo_item** %8, align 8
  %226 = getelementptr inbounds %struct.todo_item, %struct.todo_item* %225, i32 0, i32 1
  store i32 %224, i32* %226, align 4
  %227 = load i8*, i8** %11, align 8
  %228 = load i8*, i8** %10, align 8
  %229 = ptrtoint i8* %227 to i64
  %230 = ptrtoint i8* %228 to i64
  %231 = sub i64 %229, %230
  %232 = trunc i64 %231 to i32
  %233 = load %struct.todo_item*, %struct.todo_item** %8, align 8
  %234 = getelementptr inbounds %struct.todo_item, %struct.todo_item* %233, i32 0, i32 2
  store i32 %232, i32* %234, align 8
  store i32 0, i32* %6, align 4
  br label %296

235:                                              ; preds = %200
  br label %236

236:                                              ; preds = %235, %190
  br label %237

237:                                              ; preds = %236, %180
  %238 = load i8*, i8** %10, align 8
  %239 = load i8*, i8** %10, align 8
  %240 = call i32 @strcspn(i8* %239, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.5, i64 0, i64 0))
  %241 = sext i32 %240 to i64
  %242 = getelementptr inbounds i8, i8* %238, i64 %241
  store i8* %242, i8** %13, align 8
  %243 = load i8*, i8** %13, align 8
  %244 = load i8, i8* %243, align 1
  %245 = sext i8 %244 to i32
  store i32 %245, i32* %15, align 4
  %246 = load i8*, i8** %13, align 8
  store i8 0, i8* %246, align 1
  %247 = load i8*, i8** %10, align 8
  %248 = call i32 @get_oid(i8* %247, %struct.object_id* %12)
  store i32 %248, i32* %16, align 4
  %249 = load i32, i32* %15, align 4
  %250 = trunc i32 %249 to i8
  %251 = load i8*, i8** %13, align 8
  store i8 %250, i8* %251, align 1
  %252 = load i8*, i8** %13, align 8
  %253 = load i8*, i8** %13, align 8
  %254 = call i32 @strspn(i8* %253, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  %255 = sext i32 %254 to i64
  %256 = getelementptr inbounds i8, i8* %252, i64 %255
  store i8* %256, i8** %10, align 8
  %257 = load i8*, i8** %10, align 8
  %258 = load i8*, i8** %9, align 8
  %259 = ptrtoint i8* %257 to i64
  %260 = ptrtoint i8* %258 to i64
  %261 = sub i64 %259, %260
  %262 = trunc i64 %261 to i32
  %263 = load %struct.todo_item*, %struct.todo_item** %8, align 8
  %264 = getelementptr inbounds %struct.todo_item, %struct.todo_item* %263, i32 0, i32 1
  store i32 %262, i32* %264, align 4
  %265 = load i8*, i8** %11, align 8
  %266 = load i8*, i8** %10, align 8
  %267 = ptrtoint i8* %265 to i64
  %268 = ptrtoint i8* %266 to i64
  %269 = sub i64 %267, %268
  %270 = trunc i64 %269 to i32
  %271 = load %struct.todo_item*, %struct.todo_item** %8, align 8
  %272 = getelementptr inbounds %struct.todo_item, %struct.todo_item* %271, i32 0, i32 2
  store i32 %270, i32* %272, align 8
  %273 = load i32, i32* %16, align 4
  %274 = icmp slt i32 %273, 0
  br i1 %274, label %275, label %285

275:                                              ; preds = %237
  %276 = call i32 @_(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.6, i64 0, i64 0))
  %277 = load i8*, i8** %13, align 8
  %278 = load i8*, i8** %10, align 8
  %279 = ptrtoint i8* %277 to i64
  %280 = ptrtoint i8* %278 to i64
  %281 = sub i64 %279, %280
  %282 = trunc i64 %281 to i32
  %283 = load i8*, i8** %10, align 8
  %284 = call i32 (i32, i32, ...) @error(i32 %276, i32 %282, i8* %283)
  store i32 %284, i32* %6, align 4
  br label %296

285:                                              ; preds = %237
  %286 = load %struct.repository*, %struct.repository** %7, align 8
  %287 = call i32* @lookup_commit_reference(%struct.repository* %286, %struct.object_id* %12)
  %288 = load %struct.todo_item*, %struct.todo_item** %8, align 8
  %289 = getelementptr inbounds %struct.todo_item, %struct.todo_item* %288, i32 0, i32 3
  store i32* %287, i32** %289, align 8
  %290 = load %struct.todo_item*, %struct.todo_item** %8, align 8
  %291 = getelementptr inbounds %struct.todo_item, %struct.todo_item* %290, i32 0, i32 3
  %292 = load i32*, i32** %291, align 8
  %293 = icmp ne i32* %292, null
  %294 = xor i1 %293, true
  %295 = zext i1 %294 to i32
  store i32 %295, i32* %6, align 4
  br label %296

296:                                              ; preds = %285, %275, %211, %161, %136, %114, %106, %83, %40
  %297 = load i32, i32* %6, align 4
  ret i32 %297
}

declare dso_local i32 @strspn(i8*, i8*) #1

declare dso_local i64 @is_command(i32, i8**) #1

declare dso_local i32 @error(i32, i32, ...) #1

declare dso_local i32 @_(i8*) #1

declare dso_local i32 @command_to_string(i32) #1

declare dso_local i64 @skip_prefix(i8*, i8*, i8**) #1

declare dso_local i32 @strcspn(i8*, i8*) #1

declare dso_local i32 @get_oid(i8*, %struct.object_id*) #1

declare dso_local i32* @lookup_commit_reference(%struct.repository*, %struct.object_id*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
